teams: Add myself to 'installer' and leave 'embedded'.
* etc/teams.scm.in (Ludovic Courtès): Drop 'embedded' (added in
7cf606a5a0515b9a124fb58a06e3daa24a4a4e69) and add
'installer'.

--- a/etc/teams.scm.in
+++ b/etc/teams.scm.in
@@ -512,7 +512,7 @@ GLib/GIO, GTK, GStreamer and Webkit."
 
 (define-member (person "Ludovic Courtès"
                        "ludo@gnu.org")
-  core home embedded bootstrap mentors)
+  core home bootstrap installer mentors)
 
 (define-member (person "Andreas Enge"
                        "andreas@enge.fr")
